--- a/pfAAAAAAAAAAAAAAAAh/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/pfAAAAAAAAAAAAAAAAh/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1697,9 +1697,9 @@ bDrawGrid=False
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=133.000 Y=417.000
+ScreenPosition=X=582.000 Y=122.000
 WindowSize=X=1319.000 Y=934.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
