--- a/pfAAAAAAAAAAAAAAAAh/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/pfAAAAAAAAAAAAAAAAh/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1699,7 +1699,7 @@ PrimType=1
 [RootWindow]
 ScreenPosition=X=582.000 Y=122.000
 WindowSize=X=1319.000 Y=934.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
