travaille sur l'eau

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,3 +85,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.PhysicsSettings]
 bSupportUVFromHitResults=True
 
+[/Script/Engine.RendererSettings]
+r.GenerateMeshDistanceFields=True
+
