--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F4BD8CD245F3E50BD556ABB12F5C4026
-ProjectName=Third Person BP Game Template
+ProjectName=SmallWaveInTheDark
+ProjectVersion=0.1
+CompanyName=LAB[0]
+bUseBorderlessWindow=True
+
