réparation de melchior

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -112,3 +112,6 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 [/Script/Engine.RendererSettings]
 r.GenerateMeshDistanceFields=True
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bSpawnNavDataInNavBoundsLevel=True
+
