--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,6 @@ ProjectVersion=0.1
 CompanyName=LAB[0]
 bUseBorderlessWindow=True
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
